Source/WebCore/Modules/indexeddb/IDBCursor.h
@@ -28,6 +28,7 @@
 #if ENABLE(INDEXED_DATABASE)
 
 #include "ActiveDOMObject.h"
+#include "DOMWrapperWorld.h"
 #include "IDBCursorInfo.h"
 #include <heap/Strong.h>
 
